docs/examples/errors/error_observers/src/lib.rs
#![allow(dead_code)]
#![allow(unused_variables)]
pub use blueprint::blueprint;
pub use root_span::RootSpan;

mod blueprint;
pub mod injection;
pub mod logger;
mod position_blueprint;
mod root_span;
pub mod routes;
